# xcontroller

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  install_service.sh  uninstall_service.sh
.github/workflows/: build-and-test.yml  build-test-release.yml  build.yml  release.yml  test-build-release.yml
docs/: bs.md  config.md  information.md  marlin_cmd_rsp.md  movement.md  operation.md  special.md  tool.md
src/: com_parsing.rs  commands.rs  configuration.rs  main.rs  parser.rs  serialcom.rs  structs.rs  wscom.rs
