[package]
name = "xcontroller"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.3.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
futures = "0.3"
regex = "1.5.4"
log = "0.4.21"
simplelog = "0.12.2"
