[package]
name = "xcontroller"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.8.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"
futures = "0.3"
regex = "1.12.3"
log = "0.4.21"
simplelog = "0.12.2"
